--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.4.2",
     "lucide-react": "^0.517.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
